samples/invalid/syntax/reserved_keywords.g
language g0

where = 1
local = \where -> 1
local_let = let as = 1 in as
alias = object "value" as binary with {}
